# Axum

./: Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs
src/data/: Cargo.toml
src/data/src/: main.rs
src/routes/: custom_json_extractor.rs  get_json.rs  hello_world.rs  mirror_body_json.rs  mirror_custom_header.rs  mod.rs  path_variable.rs  returns_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
